--- a/inventariohlag/templates/activos_detalle.html
+++ b/inventariohlag/templates/activos_detalle.html
@@ -119,12 +119,38 @@
                                 <div class="row">
                                     <div class="col-md-12">
                                         <div class="form-group">
-                                            <label class="tit10lb">Description:</label>
+                                            <label class="tit10lb">Description 1:</label>
                                             <div class="input-group">                                
                                                 <div class="input-group-prepend">
                                                     <span class="input-group-text"><i class="bi  bi-chat-left-text"></i></span>
                                                 </div>
-                                                <input type="text" value="{{activo.detalle}}" size="120" class="form-control w-50 text8l  inputdata" />
+                                                <input type="text" value="{{activo.desc1}}" size="120" class="form-control w-50 text8l  inputdata" />
+                                            </div>
+                                        </div> 
+                                    </div>
+                                </div>  
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="form-group">
+                                            <label class="tit10lb">Description 2:</label>
+                                            <div class="input-group">                                
+                                                <div class="input-group-prepend">
+                                                    <span class="input-group-text"><i class="bi  bi-chat-left-text"></i></span>
+                                                </div>
+                                                <input type="text" value="{{activo.desc2}}" size="120" class="form-control w-50 text8l  inputdata" />
+                                            </div>
+                                        </div> 
+                                    </div>
+                                </div>  
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="form-group">
+                                            <label class="tit10lb">Description 3:</label>
+                                            <div class="input-group">                                
+                                                <div class="input-group-prepend">
+                                                    <span class="input-group-text"><i class="bi  bi-chat-left-text"></i></span>
+                                                </div>
+                                                <input type="text" value="{{activo.desc3}}" size="120" class="form-control w-50 text8l  inputdata" />
                                             </div>
                                         </div> 
                                     </div>
