--- a/inventariohlag/templates/activos_listar.html
+++ b/inventariohlag/templates/activos_listar.html
@@ -120,7 +120,6 @@
                                             </div>
                                       </div> 
                                     </div>
-
                                 </div>
                                 <div class="row">
                                     <div class="col-md-6">
@@ -159,12 +158,38 @@
                                 <div class="row">
                                     <div class="col-md-12">
                                         <div class="form-group">
-                                            <label class="tit10lb">Description:</label>
+                                            <label class="tit10lb">Description 1:</label>
                                             <div class="input-group">                                
                                                 <div class="input-group-prepend">
                                                     <span class="input-group-text"><i class="bi  bi-chat-left-text"></i></span>
                                                 </div>
-                                                <input type="text" name="detalle" id="detalle" size="120" maxlength="120" class="form-control w-50 text8l uppcase inputdata" />
+                                                <input type="text" name="desc1" id="desc1" size="120" maxlength="120" class="form-control w-50 text8l uppcase inputdata" />
+                                            </div>
+                                        </div> 
+                                    </div>
+                                </div>  
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="form-group">
+                                            <label class="tit10lb">Description 2:</label>
+                                            <div class="input-group">                                
+                                                <div class="input-group-prepend">
+                                                    <span class="input-group-text"><i class="bi  bi-chat-left-text"></i></span>
+                                                </div>
+                                                <input type="text" name="desc1" id="desc2" size="120" maxlength="120" class="form-control w-50 text8l uppcase inputdata" />
+                                            </div>
+                                        </div> 
+                                    </div>
+                                </div>  
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="form-group">
+                                            <label class="tit10lb">Description 3:</label>
+                                            <div class="input-group">                                
+                                                <div class="input-group-prepend">
+                                                    <span class="input-group-text"><i class="bi  bi-chat-left-text"></i></span>
+                                                </div>
+                                                <input type="text" name="desc1" id="desc3" size="120" maxlength="120" class="form-control w-50 text8l uppcase inputdata" />
                                             </div>
                                         </div> 
                                     </div>
