--- a/tablas/templates/ciudades_ajax_listar.html
+++ b/tablas/templates/ciudades_ajax_listar.html
@@ -5,7 +5,7 @@
             <tr>
                 <th width="10%" class="tdtit10">Key</th>
                 <th width="30%" class="tdtit10">City</th>
-                <th width="20%" class="tdtit10">ISO Code</th>           
+                <th width="20%" class="tdtit10">IATA Code</th>           
                 <th width="30%" class="tdtit10">Country</th>
                 <th width="10%" class="tdtit10">Action</th>
             </tr>
