--- a/tablas/templates/ciudades_listar.html
+++ b/tablas/templates/ciudades_listar.html
@@ -61,7 +61,7 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label class="tit10lb">ISO Code:</label>
+                                    <label class="tit10lb">IATA Code:</label>
                                     <div class="input-group">
                                         <div class="input-group-prepend">
                                             <span class="input-group-text"><i class="bi bi-chat-left-text"></i></span>
